# timeforged

./: .dockerignore  .gitignore  CHANGELOG.md  CONCEPT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh
contrib/claude-code/: timeforged-heartbeat.sh
contrib/github-readme/: sync-card.sh  timeforged-card.service  timeforged-card.timer
contrib/waybar/: install.sh  timeforged.sh
crates/tf/: Cargo.toml
crates/tf/src/: client.rs  main.rs
crates/tf/src/commands/: init.rs  link.rs  list.rs  mod.rs  profile.rs  register.rs  report.rs  send.rs  status.rs  sync.rs  today.rs  unwatch.rs
crates/timeforged/: Cargo.toml
crates/timeforged-core/: Cargo.toml
crates/timeforged-core/src/: api.rs  config.rs  error.rs  lib.rs  util.rs
crates/timeforged-core/src/models/: event.rs  mod.rs  report.rs  user.rs
crates/timeforged-mcp/: package-lock.json  package.json
crates/timeforged-mcp/src/: index.ts
crates/timeforged-tray/: Cargo.toml
crates/timeforged-tray/src/: main.rs  poller.rs
crates/timeforged/src/: app.rs  auth.rs  main.rs  rate_limit.rs  sync.rs  web.rs
crates/timeforged/src/handlers/: card.rs  events.rs  health.rs  mod.rs  register.rs  reports.rs  users.rs  watcher.rs
crates/timeforged/src/service/: card_service.rs  event_service.rs  mod.rs  report_service.rs  user_service.rs
crates/timeforged/src/storage/: sqlite.rs
crates/timeforged/src/storage/migrations/: 001_init.sql  002_public_profile.sql
crates/timeforged/src/watcher/: debounce.rs  file_watcher.rs  mod.rs  window_tracker.rs
crates/timeforged/web/: index.html  package-lock.json  package.json  vite.config.ts
crates/timeforged/web/public/: timeforged-favicon
crates/timeforged/web/src/: App.vue  api.ts  main.ts
crates/timeforged/web/src/components/: LanguageList.vue  ProjectList.vue  SessionList.vue  TimeChart.vue
crates/timeforged/web/src/views/: Dashboard.vue  Settings.vue
