[workspace]
members = ["crates/timeforged", "crates/timeforged-core", "crates/tf"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Blysspeak"]

[workspace.dependencies]
# Shared
timeforged-core = { path = "crates/timeforged-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"

# Watcher
notify = "7"
globset = "0.4"

# Daemon
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
anyhow = "1"
rust-embed = "8"
mime_guess = "2"

# CLI
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "3"
