[package]
name = "tf"
description = "TimeForged CLI client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
timeforged-core = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
gethostname = { workspace = true }
