[package]
name = "timeforged"
description = "Self-hosted time tracking daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
timeforged-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
